allow building/testing virtual threads in case using JDK19+